--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
     <h1>learning git </h1>
     <p>hello para</p>
+    <span>this is span</span>
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ul>
 </body>
 </html>
