--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Learning git</h1>
+    <span>commit reseting trial</span>
+    <ul>1</ul>
+    <ul>2</ul>
 </body>
 </html>
